style.css
/* ... */
.upload-section {
    background-color: rgba(128, 128, 128, 0.3);
    padding: 20px;
    margin-bottom: 20px;
}

.table-section {
    background-color: rgba(128, 128, 128, 0.3);
    padding: 20px;
}

#table-flash-container,
#table-flash-container table input[type=checkbox] {
    opacity: 1;
    pointer-events: auto;
}


#table-flash-container {
    background-color: #f7f7f7;
    padding: 20px;
    margin-top: 20px;
    opacity: 0.5;
    pointer-events: none;
}

#table-flash-container input[type=checkbox] {
    opacity: 0.5;
    pointer-events: none;
}

#table-flash-container #flash-button {
    opacity: 0.5;
    pointer-events: none;
}

#table-flash-container.enabled {
    opacity: 1;
    pointer-events: auto;
}

#table-flash-container.enabled input[type=checkbox] {
    opacity: 1;
    pointer-events: auto;
}

#table-flash-container.enabled #flash-button {
    opacity: 1;
    pointer-events: auto;
}

.drive-checkbox {
    scale: 145%;
    accent-color: #f44336;
}

#selected-file-name {
    margin-top: 10px;
    margin-bottom: 2em;
    color: #ddd;
    background-color: #FFF0;
    font-size: large;
    text-align: center;
    border: 2.5px solid grey;
    border-style: dashed;
    padding: 1.5em;
    transition: all 0.5s ease;
    align-self: center;
    border-radius: 10px;
}

#selected-file-name:hover {
    border-color: #af73af;
    color: #6e206e;
    transform: scale(1.3);
    white-space: nowrap;
}

/* for dragover effect with file */
#selected-file-name.is-dragover {
    border-color: #508C50;
    color: #91df91;
    font-size: x-large;
}

.form-group label:hover {
    filter: invert(1);
}

.button:hover {
    background-color: #508C50;
}

.button.btnFlash:hover:disabled {
    color: #ddd;
    background: #cc4646;
}

.button.btnFlash:hover:enabled {
    color: #ddd;
    background: green;
}

.tooltip {
    position: relative;
    display: flex;
    flex-flow: column;
    width: 100%;
    overflow: visible;
    padding: 1em 0;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: fit-content;
    height: fit-content;
    align-self: center;
    background-color: rgb(99, 99, 99);
    color: #ddd;
    text-align: center;
    border-radius: 6px;
    padding: 6px;
    padding-right: 0px;
    z-index: 1;
    top: 100%;
    left: -50%;
    opacity: 0;
    transition: visibility 0.5s ease-out, opacity 0.5s ease-out;
    transition-delay: 0.5s;
    white-space: nowrap;
}

.tooltip .tooltiptext::after {
    content: "";
    position: relative;
    bottom: 158%;
    left: -50%;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent rgb(99, 99, 99) transparent;
}

.tooltip-hover:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}

.mode-selection {
    display: flex;
    flex-flow: column;
    display: flex;
    align-items: center;
    padding: 0;
    width: 50%;
    background-color: #1313132b;
    margin: auto;
    border-radius: 15px;
    backdrop-filter: blur(15px);
    overflow: visible;
}

@media screen and (max-width: 992px) {
    .mode-selection {
        width: 80%;
    }
}


/* Style the tab */
.tab {
    background-color: #8f8f9ab0;
    width: 100%;
    border-radius: 15px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    overflow: clip;
}

/* Style the buttons inside the tab */
.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    /*  padding: 14px 16px;*/
    padding: 1em;
    transition: 0.3s;
    font-size: 17px;
    width: 50%;
    color: #ddd;
    font-weight: bold;
    white-space: nowrap;
    transition: all 0.2s ease;
}

/* Change background color of buttons on hover */
.tab button:hover {
    color: #fff;
    background-color: #f443369c;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #f44336;
    color: #fff;
    height: 100%;
}

.tab button.active:hover {
    text-shadow: 0 0 3px #DBDBDB, 0 0 5px #d3d3d3;
}

/* Style the tab content */
.tabcontent {
    display: none;
    border: none;
    width: 100%;
    height: 100%;
    flex-flow: column;
}

.file-upload-container {
    width: 100%;
}

.select-fs {
    width: 20%;
    text-align: center;
    font-size: medium;
}

@media screen and (max-width: 992px) {
    .select-fs {
        width: 70%;
        text-align: center;
        font-size: medium;
    }

    .button {
        width: 55%;
    }

    button[disabled=disabled],
    button:disabled {
        width: 55%;
    }

    form {
        width: 100%;
    }
}

/* blink effect after fs has been selected */
@keyframes blinkingDiv {
    0% {
        filter: brightness(100%);
    }

    25% {
        filter: brightness(115%);
    }

    50% {
        filter: brightness(145%);
    }

    75% {
        filter: brightness(115%);
    }

    100% {
        filter: brightness(100%);
    }
}

.blinkDiv {
    animation: blinkingDiv 0.35s 2;
    animation-delay: 0.75s;
    transition: all 0.2s ease;
}

.fsSelectDiv {
    height: 100%;
    padding-bottom: 6em;
}

@media screen and (max-width: 992px) {
    html {
        height: auto;
    }
}


@media screen and (min-height: 778px) {
    html {
        height: 100vh;
    }
}

body.swal2-height-auto {
    height: 100vh !important;
}

.warning-dialogue-actions {
    margin: 0 2em;
}

.order-1 {
    order: 1;
}

.order-2 {
    order: 2;
}

.order-3 {
    order: 3;
}

.right-gap {
    margin-right: auto;
}


.tgl {
    display: none;
}

.tgl,
.tgl:after,
.tgl:before,
.tgl *,
.tgl *:after,
.tgl *:before,
.tgl+.tgl-btn {
    box-sizing: border-box;
}

.tgl::-moz-selection,
.tgl:after::-moz-selection,
.tgl:before::-moz-selection,
.tgl *::-moz-selection,
.tgl *:after::-moz-selection,
.tgl *:before::-moz-selection,
.tgl+.tgl-btn::-moz-selection {
    background: none;
}

.tgl::selection,
.tgl:after::selection,
.tgl:before::selection,
.tgl *::selection,
.tgl *:after::selection,
.tgl *:before::selection,
.tgl+.tgl-btn::selection {
    background: none;
}
/* ... */

